# GenAIChallenge

./: .env  TODO.md  __init__.py  careerbridge.db  index.css  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js  vite.config.js.timestamp-1761240201136-38ee0ce239c06.mjs
assets/: index-7b2e68c7.css  index-d8db6899.js
backend/: .env  database.py  main.py  models.py  render,yaml  render.yaml  requirements.txt  schemas.py
backend/routers/: __init__.py  auth.py  career_path_routes.py  chatbot.py  interview_routes.py  job_market.py  profile_routes.py  review_resume.py  user.py
backend/services/: __init__.py  gemini_service.py  vertex_ai_service.py
backend/utils/: security.py
server/: package-lock.json  package.json  server.js
src/: App.css  App.jsx  config.json  main.jsx
src/components/: GoogleAuth.jsx  HomePage.jsx  LoginPage.css  LoginPage.jsx
src/components/CareerCard/: CareerCard.css  CareerCard.jsx
src/components/CoreFeatures/: CoreFeatures.css  CoreFeatures.jsx
src/components/Footer/: Footer.css  Footer.jsx
src/components/Navbar/: Navbar.css  Navbar.jsx
src/components/StatsCard/: StatsCards.css  StatsCards.jsx
src/pages/: About.jsx  CareerRoadmap.jsx  ChatBot.jsx  ChatBot_new.jsx  Contact.jsx  Home.jsx  JobMarketPage.jsx  LoginPage.jsx  MockInterview.jsx  ResumeAnalyzer.jsx  ResumePage.jsx
src/pages/CSS/: chat.css  home.css  mock.css  resume.css
src/styles/: animations.css  buttons.css  cards.css  forms.css  main.css  variables.css
